Improved the Statistical Inference Section

--- a/sections/可靠性数据与生存分析.tex
+++ b/sections/可靠性数据与生存分析.tex
@@ -456,7 +456,7 @@ where $ c_i $ is \# censor in $ [t_i,t_{i+1}) $, $ r_i $ is \# censoring at the 
     where $ \mathrm{mid}\,i  $ means the mid point of $ [t_{i-1},t_{i}) $, i.e. $ \dfrac{t_{i-1}+t_{i}}{2} $
 
 
-\subsubsection{Hypothesis Testing to Group Comparison}
+\subsubsection{Hypothesis Testing to Group Comparison}\label{SubSubSectionSurvivalAnalysisGroupComparison}
 Key focus: how to judge the difference between two survival function $ S_1(t),\,S_2(t) $, or even when there are more than two groups.
 
 \begin{point}
