--- a/sections/因果推断导论.tex
+++ b/sections/因果推断导论.tex
@@ -232,7 +232,7 @@ The null model is complicated, say, there could be multiple PO levels / interfer
 
 \subsection{Inference to Causal Effect}
 
-First we focus on the randomness in finite sample, i.e. randomness of assignment mechanism. Specifically we usually consider the case of completely randomized experiment: $ N_t $ in $ N $ items are given treatment and $ N_c=N-N_t $ in $ N $ are given control.
+First we focus on the randomness in finite sample, i.e. randomness of assignment mechanism. Specifically we usually consider the case of Completely Randomized Experiment (CRE)\index{CRE (Completely Randomized Experiment)}: $ N_t $ in $ N $ items are given treatment and $ N_c=N-N_t $ in $ N $ are given control, and the assignment is given \textbf{randomly}. 
 \begin{align*}
     \mathbb{P}\left( W|X,Y \right)=1\bigg/\binom{N}{N_\mathrm{t} },\,\text{case }\sum_{i=1}^NW_i=N_\mathrm{t}   
 \end{align*}
