--- a/sections/多元统计分析.tex
+++ b/sections/多元统计分析.tex
@@ -862,7 +862,7 @@
 
         \item Multi-Dimensional case: Hotelling's $ T^2 $\index{Hotelling's $ T^2 $}
         \begin{equation}
-            T^2 =[\sqrt{n}(\bar{X}-\mu_0)']S^{-1}[\sqrt{n}(\bar{X}-\mu _0)] \sim N_p(0,\Sigma )'\dfrac{W_p(n-1,\Sigma )}{n-1}N_p(0,\Sigma )=\dfrac{p}{n-p}(n-1)F_{p,n-p}
+            T^2 =[\sqrt{n}(\bar{X}-\mu_0)']S^{-1}[\sqrt{n}(\bar{X}-\mu _0)] \sim \dfrac{p}{n-p}(n-1)F_{p,n-p}
         \end{equation}
 
         And we can get the distribution of \textbf{Hotelling's $ T^2 $}:
