--- a/sections/生物统计学概论.tex
+++ b/sections/生物统计学概论.tex
@@ -491,7 +491,7 @@ Contingency table is an easy way to display categorical variables, an example:
 \end{table}
       
 
-\subsubsection{Quantities and Statistics from Contingency Table}
+\subsubsection{Quantities and Statistics from Contingency Table}\label{SubSubSectionContingencyTableInBioStat}
 
 \begin{point}
     Prospective Study and Retrospective Study
