--- a/summary.tex
+++ b/summary.tex
@@ -55,7 +55,7 @@
 %其他设置
 \newenvironment{point}{\raggedright$\Box $ \bfseries}{}%新环境point，用于标示重点内容
 \newenvironment{rcode}{\raggedright$  \vartriangleright  $ \lstinline|R.| \textbf{Code}  \\}{}%新环境rcode，用于建立R语言命令段落
-\renewenvironment{proof}{\textit{proof}: \begin{minipage}[t]{\linewidth} }{ $ \square  $\end{minipage}} % 证明环境回退到英文版 以proof开头
+\renewenvironment{proof}{\textit{proof}: \begin{minipage}[t]{0.9\linewidth} }{ $ \square  $\end{minipage}\\} % 证明环境回退到英文版 以proof开头
 \newenvironment{algorithm}[1]{\vspace{12pt} \hrule\hrule \vspace{3pt} \noindent\textbf{\color[HTML]{E63F00}Algorithm } \,\textit{#1} \vspace{3pt} \hrule\vspace{6pt}
 }{\vspace{6pt}\hrule\hrule \vspace{12pt}} % 算法伪代码格式环境
 
